# openstack_mogan_study

./: README.md  myweb.db  requirements.txt  setup.cfg  setup.py
myweb/: alembic.ini
myweb/YOUR_ALEMBIC_DIR/: env.py  script.py.mako
myweb/YOUR_ALEMBIC_DIR/versions/: 11b594075656_create_new.py  1dbe5f540fc8_add_articles.py  2017_12_15_16_41_ad3b69aec167_test_template_name.py  2017_12_15_16_42_2eb7ff5d2b58_test_template_name_2.py  61ffd6919792_create_roles.py  99405619eeea_users_change.py
myweb/alembic_model/: modes.py
myweb/api/: app.py  config.py  expose.py  hooks.py
myweb/api/controllers/: base.py  base_2.py  link.py  root.py  root_2.py
myweb/api/validation/: __init__.py  (+1 more)
myweb/cmd/: api.py  myweb.db
myweb/common/: exception.py  i18n.py
myweb/conf/: __init__.py  api.py
myweb/db/: api.py  api_myweb.py  api_test.py  engine_api.py  engine_test.py  models.py  mywe.db  myweb.db  test.db  test_1.py
myweb/objects/: __init__.py  aggregate.py  base.py  fields.py  user.py
myweb/test/: _getattribute.py  class_test1.py  decoration.py  exception-test.py  exit.py  gcd_.py  gevent_test.py  gevent_test2.py  gevent_test3.py  gevent_test4.py  i18n.py  list_tup.py  log_test.py  messages.po  olso_log_test.py  oslo_conf_test.py  rpc-cli.py  rpc-server.py  run_time.py  test-1.py  test_10.py  test_11.py  test_2.py  test_3.py  test_4.py  test_5.py  test_6.py  test_7.py  test_8.py  test_9.py  test_bug.py  test_decode_qr.py  test_exception.py  test_getmac.py  test_like_splite.py  test_open_image.py  test_open_sqlitedb.py  test_qrcode.py  test_range.py  test_re.py  (+4 more)
(+345 files in other folders)
